# techPrototypeTwo

./: .gitignore  REPO_TREE_MAP.md  analyze_all_validations.py  analyze_checkpoint_funnel.py  analyze_expiry_filter_debug.py  analyze_variance_swap_checkpoints.py  analyze_variance_swaps.py  black_scholes_greeks.py  complete_funnel_analysis.py  config_loader.py  config_manager.py  config_schema.py  data_refresh.py  digital_hedge_builder.py  example_digital_vertical_with_options.json  execution_pricing.py  expected_value_filter.py  first_variance_swap.json  fix_variance_swap_validation.patch  implement_position_validation.py  logger_config.py  main_scanner.py  market_data_analyzer.py  modular_arbitrage_calculator_v2.py  mypy.ini  options_data_enricher.py  orchestrator.py  pipeline_dependency_tree.md  position_specific_validation.patch  position_validation_changes.md  probability_ranker.py  process_validation_failures.py  ranking_config.py  refactor_patch.diff  requirements.txt  simple_websocket_manager.py  test_filter.py  test_strategy_only.py  test_variance_swap_debug.py  true_arbitrage_detector.py  (+3 more)
analysis/: pm_gamma_sample.jsonl  validation_audit.jsonl
config/: baseline.yaml  defaults.yaml
core/: expiry_window.py
debug_runs/: expiry_debug.jsonl  expiry_debug_new.jsonl  pm_tagged_live.json  pm_tagged_live_counts.json
docs/: expiry_filtering_report.md  expiry_selection_fix.md  (+2 more)
pm/: contract.py  (+1 more)
sparse-static-hedge/: README.md  pyproject.toml
sparse-static-hedge/src/sparse_static_hedge/: __init__.py  omp_hedge.py
sparse-static-hedge/tests/: test_omp_hedge.py
(+269 files in other folders)
